yacc/hw/quarantine/y.output
Terminals unused in grammar

    ELSE
    ENUMERATION_CONSTANT


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression AND_OP inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression OR_OP logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression '?' expression ':' conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: '='
   62                    | MUL_ASSIGN
   63                    | DIV_ASSIGN
   64                    | MOD_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | LEFT_ASSIGN
   68                    | RIGHT_ASSIGN
   69                    | AND_ASSIGN
   70                    | XOR_ASSIGN
   71                    | OR_ASSIGN

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'
   77            | integer_declaration_specifiers init_declarator_list ';'
   78            | character_declaration_specifiers init_declarator_list ';'

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list ',' init_declarator

   87 init_declarator: declarator
   88                | declarator '=' initializer

   89 storage_class_specifier: TYPEDEF
   90                        | EXTERN
   91                        | STATIC
   92                        | AUTO
   93                        | REGISTER

   94 type_specifier: VOID
   95               | SHORT
   96               | LONG
   97               | FLOAT
   98               | DOUBLE
   99               | SIGNED
  100               | UNSIGNED
  101               | struct_or_union_specifier
  102               | enum_specifier
  103               | TYPE_NAME
  104               | TYPEDEF_NAME

  105 integer_type_specifier: INT

  106 character_type_specifier: CHAR

  107 integer_declaration_specifiers: storage_class_specifier integer_declaration_specifiers
  108                               | type_specifier integer_declaration_specifiers
  109                               | integer_type_specifier

  110 character_declaration_specifiers: storage_class_specifier character_declaration_specifiers
  111                                 | type_specifier character_declaration_specifiers
  112                                 | character_type_specifier

  113 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  114                          | struct_or_union '{' struct_declaration_list '}'
  115                          | struct_or_union IDENTIFIER

  116 struct_or_union: STRUCT
  117                | UNION

  118 struct_declaration_list: struct_declaration
  119                        | struct_declaration_list struct_declaration

  120 struct_declaration: specifier_qualifier_list ';'
  121                   | specifier_qualifier_list struct_declarator_list ';'

  122 specifier_qualifier_list: type_specifier specifier_qualifier_list
  123                         | type_specifier
  124                         | integer_type_specifier specifier_qualifier_list
  125                         | integer_type_specifier
  126                         | character_type_specifier specifier_qualifier_list
  127                         | character_type_specifier
  128                         | type_qualifier specifier_qualifier_list
  129                         | type_qualifier

  130 struct_declarator_list: struct_declarator
  131                       | struct_declarator_list ',' struct_declarator

  132 struct_declarator: declarator
  133                  | ':' constant_expression
  134                  | declarator ':' constant_expression

  135 enum_specifier: ENUM '{' enumerator_list '}'
  136               | ENUM IDENTIFIER '{' enumerator_list '}'
  137               | ENUM IDENTIFIER

  138 enumerator_list: enumerator
  139                | enumerator_list ',' enumerator

  140 enumerator: IDENTIFIER
  141           | IDENTIFIER '=' constant_expression

  142 type_qualifier: CONST
  143               | VOLATILE

  144 declarator: pointer direct_declarator
  145           | direct_declarator
  146           | direct_array_declarator

  147 direct_declarator: IDENTIFIER
  148                  | '(' declarator ')'
  149                  | direct_declarator '(' parameter_type_list ')'
  150                  | direct_declarator '(' identifier_list ')'
  151                  | direct_declarator '(' ')'

  152 direct_array_declarator: IDENTIFIER '[' constant_expression ']'
  153                        | IDENTIFIER '[' ']'
  154                        | direct_array_declarator '[' constant_expression ']'
  155                        | direct_array_declarator '[' ']'

  156 pointer: '*'
  157        | '*' type_qualifier_list
  158        | '*' pointer
  159        | '*' type_qualifier_list pointer

  160 type_qualifier_list: type_qualifier
  161                    | type_qualifier_list type_qualifier

  162 parameter_type_list: parameter_list
  163                    | parameter_list ',' ELLIPSIS

  164 parameter_list: parameter_declaration
  165               | parameter_list ',' parameter_declaration

  166 parameter_declaration: declaration_specifiers declarator
  167                      | integer_declaration_specifiers declarator
  168                      | character_declaration_specifiers declarator
  169                      | declaration_specifiers abstract_declarator
  170                      | declaration_specifiers

  171 identifier_list: IDENTIFIER
  172                | identifier_list ',' IDENTIFIER

  173 type_name: specifier_qualifier_list
  174          | specifier_qualifier_list abstract_declarator

  175 abstract_declarator: pointer
  176                    | direct_abstract_declarator
  177                    | pointer direct_abstract_declarator

  178 direct_abstract_declarator: '(' abstract_declarator ')'
  179                           | '[' ']'
  180                           | '[' constant_expression ']'
  181                           | direct_abstract_declarator '[' ']'
  182                           | direct_abstract_declarator '[' constant_expression ']'
  183                           | '(' ')'
  184                           | '(' parameter_type_list ')'
  185                           | direct_abstract_declarator '(' ')'
  186                           | direct_abstract_declarator '(' parameter_type_list ')'

  187 initializer: assignment_expression
  188            | '{' initializer_list '}'
  189            | '{' initializer_list ',' '}'

  190 initializer_list: initializer
  191                 | initializer_list ',' initializer

  192 statement: labeled_statement
  193          | compound_statement
  194          | expression_statement
  195          | selection_statement
  196          | iteration_statement
  197          | jump_statement

  198 labeled_statement: IDENTIFIER ':' statement
  199                  | CASE constant_expression ':' statement
  200                  | DEFAULT ':' statement

  201 compound_statement: '{' '}'
  202                   | '{' list_of_list '}'

  203 list_of_list: code_block_list
  204             | list_of_list code_block_list

  205 code_block_list: declaration
  206                | statement

  207 declaration_list: declaration
  208                 | declaration_list declaration

  209 expression_statement: ';'
  210                     | expression ';'

  211 selection_statement: IF '(' expression ')' statement
  212                    | SWITCH '(' expression ')' statement

  213 iteration_statement: WHILE '(' expression ')' statement
  214                    | DO statement WHILE '(' expression ')' ';'
  215                    | FOR '(' expression_statement expression_statement ')' statement
  216                    | FOR '(' expression_statement expression_statement expression ')' statement
  217                    | FOR '(' declaration expression_statement ')' statement
  218                    | FOR '(' declaration expression_statement expression ')' statement

  219 jump_statement: GOTO IDENTIFIER ';'
  220               | CONTINUE ';'
  221               | BREAK ';'
  222               | RETURN ';'
  223               | RETURN expression ';'

  224 translation_unit: external_declaration
  225                 | translation_unit external_declaration

  226 preprocessor_declaration: include_preprocessor
  227                         | define_preprocessor

  228 include_preprocessor: INCLUDE_PP STRING_LITERAL
  229                     | INCLUDE_PP STDLIB

  230 define_preprocessor: DEFINE_PP IDENTIFIER CONSTANT

  231 external_declaration: function_definition
  232                     | preprocessor_declaration
  233                     | declaration

  234 function_definition: declaration_specifiers declarator declaration_list compound_statement
  235                    | declaration_specifiers declarator compound_statement
  236                    | integer_declaration_specifiers declarator declaration_list compound_statement
  237                    | integer_declaration_specifiers declarator compound_statement
  238                    | character_declaration_specifiers declarator declaration_list compound_statement
  239                    | character_declaration_specifiers declarator compound_statement
  240                    | declarator declaration_list compound_statement
  241                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 26
    '%' (37) 32
    '&' (38) 21 48
    '(' (40) 4 7 8 20 28 148 149 150 151 178 183 184 185 186 211 212 213 214 215 216 217 218
    ')' (41) 4 7 8 20 28 148 149 150 151 178 183 184 185 186 211 212 213 214 215 216 217 218
    '*' (42) 22 30 156 157 158 159
    '+' (43) 23 34
    ',' (44) 14 73 86 131 139 163 165 172 189 191
    '-' (45) 24 35
    '.' (46) 9
    '/' (47) 31
    ':' (58) 58 133 134 198 199 200
    ';' (59) 75 76 77 78 120 121 209 210 214 219 220 221 222 223
    '<' (60) 40
    '=' (61) 61 88 141
    '>' (62) 41
    '?' (63) 58
    '[' (91) 6 152 153 154 155 179 180 181 182
    ']' (93) 6 152 153 154 155 179 180 181 182
    '^' (94) 50
    '{' (123) 113 114 135 136 188 189 201 202
    '|' (124) 52
    '}' (125) 113 114 135 136 188 189 201 202
    '~' (126) 25
    error (256)
    IDENTIFIER (258) 1 9 10 113 115 136 137 140 141 147 152 153 171 172 198 219 230
    CONSTANT (259) 2 230
    STRING_LITERAL (260) 3 228
    SIZEOF (261) 19 20
    PTR_OP (262) 10
    INC_OP (263) 11 16
    DEC_OP (264) 12 17
    LEFT_OP (265) 37
    RIGHT_OP (266) 38
    LE_OP (267) 42
    GE_OP (268) 43
    EQ_OP (269) 45
    NE_OP (270) 46
    AND_OP (271) 54
    OR_OP (272) 56
    MUL_ASSIGN (273) 62
    DIV_ASSIGN (274) 63
    MOD_ASSIGN (275) 64
    ADD_ASSIGN (276) 65
    SUB_ASSIGN (277) 66
    LEFT_ASSIGN (278) 67
    RIGHT_ASSIGN (279) 68
    AND_ASSIGN (280) 69
    XOR_ASSIGN (281) 70
    OR_ASSIGN (282) 71
    TYPE_NAME (283) 103
    TYPEDEF (284) 89
    EXTERN (285) 90
    STATIC (286) 91
    AUTO (287) 92
    REGISTER (288) 93
    CHAR (289) 106
    SHORT (290) 95
    INT (291) 105
    LONG (292) 96
    SIGNED (293) 99
    UNSIGNED (294) 100
    FLOAT (295) 97
    DOUBLE (296) 98
    CONST (297) 142
    VOLATILE (298) 143
    VOID (299) 94
    STRUCT (300) 116
    UNION (301) 117
    ENUM (302) 135 136 137
    ELLIPSIS (303) 163
    CASE (304) 199
    DEFAULT (305) 200
    IF (306) 211
    ELSE (307)
    SWITCH (308) 212
    WHILE (309) 213 214
    DO (310) 214
    FOR (311) 215 216 217 218
    GOTO (312) 219
    CONTINUE (313) 220
    BREAK (314) 221
    RETURN (315) 222 223
    INCLUDE_PP (316) 228 229
    DEFINE_PP (317) 230
    STDLIB (318) 229
    TYPEDEF_NAME (319) 104
    ENUMERATION_CONSTANT (320)


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    primary_expression (91)
        on left: 1 2 3 4
        on right: 5
    postfix_expression (92)
        on left: 5 6 7 8 9 10 11 12
        on right: 6 7 8 9 10 11 12 15
    argument_expression_list (93)
        on left: 13 14
        on right: 8 14
    unary_expression (94)
        on left: 15 16 17 18 19 20
        on right: 16 17 19 27 60
    unary_operator (95)
        on left: 21 22 23 24 25 26
        on right: 18
    cast_expression (96)
        on left: 27 28
        on right: 18 28 29 30 31 32
    multiplicative_expression (97)
        on left: 29 30 31 32
        on right: 30 31 32 33 34 35
    additive_expression (98)
        on left: 33 34 35
        on right: 34 35 36 37 38
    shift_expression (99)
        on left: 36 37 38
        on right: 37 38 39 40 41 42 43
    relational_expression (100)
        on left: 39 40 41 42 43
        on right: 40 41 42 43 44 45 46
    equality_expression (101)
        on left: 44 45 46
        on right: 45 46 47 48
    and_expression (102)
        on left: 47 48
        on right: 48 49 50
    exclusive_or_expression (103)
        on left: 49 50
        on right: 50 51 52
    inclusive_or_expression (104)
        on left: 51 52
        on right: 52 53 54
    logical_and_expression (105)
        on left: 53 54
        on right: 54 55 56
    logical_or_expression (106)
        on left: 55 56
        on right: 56 57 58
    conditional_expression (107)
        on left: 57 58
        on right: 58 59 74
    assignment_expression (108)
        on left: 59 60
        on right: 13 14 60 72 73 187
    assignment_operator (109)
        on left: 61 62 63 64 65 66 67 68 69 70 71
        on right: 60
    expression (110)
        on left: 72 73
        on right: 4 6 58 73 210 211 212 213 214 216 218 223
    constant_expression (111)
        on left: 74
        on right: 133 134 141 152 154 180 182 199
    declaration (112)
        on left: 75 76 77 78
        on right: 205 207 208 217 218 233
    declaration_specifiers (113)
        on left: 79 80 81 82 83 84
        on right: 75 76 80 82 84 166 169 170 234 235
    init_declarator_list (114)
        on left: 85 86
        on right: 76 77 78 86
    init_declarator (115)
        on left: 87 88
        on right: 85 86
    storage_class_specifier (116)
        on left: 89 90 91 92 93
        on right: 79 80 107 110
    type_specifier (117)
        on left: 94 95 96 97 98 99 100 101 102 103 104
        on right: 81 82 108 111 122 123
    integer_type_specifier (118)
        on left: 105
        on right: 109 124 125
    character_type_specifier (119)
        on left: 106
        on right: 112 126 127
    integer_declaration_specifiers (120)
        on left: 107 108 109
        on right: 77 107 108 167 236 237
    character_declaration_specifiers (121)
        on left: 110 111 112
        on right: 78 110 111 168 238 239
    struct_or_union_specifier (122)
        on left: 113 114 115
        on right: 101
    struct_or_union (123)
        on left: 116 117
        on right: 113 114 115
    struct_declaration_list (124)
        on left: 118 119
        on right: 113 114 119
    struct_declaration (125)
        on left: 120 121
        on right: 118 119
    specifier_qualifier_list (126)
        on left: 122 123 124 125 126 127 128 129
        on right: 120 121 122 124 126 128 173 174
    struct_declarator_list (127)
        on left: 130 131
        on right: 121 131
    struct_declarator (128)
        on left: 132 133 134
        on right: 130 131
    enum_specifier (129)
        on left: 135 136 137
        on right: 102
    enumerator_list (130)
        on left: 138 139
        on right: 135 136 139
    enumerator (131)
        on left: 140 141
        on right: 138 139
    type_qualifier (132)
        on left: 142 143
        on right: 83 84 128 129 160 161
    declarator (133)
        on left: 144 145 146
        on right: 87 88 132 134 148 166 167 168 234 235 236 237 238 239 240 241
    direct_declarator (134)
        on left: 147 148 149 150 151
        on right: 144 145 149 150 151
    direct_array_declarator (135)
        on left: 152 153 154 155
        on right: 146 154 155
    pointer (136)
        on left: 156 157 158 159
        on right: 144 158 159 175 177
    type_qualifier_list (137)
        on left: 160 161
        on right: 157 159 161
    parameter_type_list (138)
        on left: 162 163
        on right: 149 184 186
    parameter_list (139)
        on left: 164 165
        on right: 162 163 165
    parameter_declaration (140)
        on left: 166 167 168 169 170
        on right: 164 165
    identifier_list (141)
        on left: 171 172
        on right: 150 172
    type_name (142)
        on left: 173 174
        on right: 20 28
    abstract_declarator (143)
        on left: 175 176 177
        on right: 169 174 178
    direct_abstract_declarator (144)
        on left: 178 179 180 181 182 183 184 185 186
        on right: 176 177 181 182 185 186
    initializer (145)
        on left: 187 188 189
        on right: 88 190 191
    initializer_list (146)
        on left: 190 191
        on right: 188 189 191
    statement (147)
        on left: 192 193 194 195 196 197
        on right: 198 199 200 206 211 212 213 214 215 216 217 218
    labeled_statement (148)
        on left: 198 199 200
        on right: 192
    compound_statement (149)
        on left: 201 202
        on right: 193 234 235 236 237 238 239 240 241
    list_of_list (150)
        on left: 203 204
        on right: 202 204
    code_block_list (151)
        on left: 205 206
        on right: 203 204
    declaration_list (152)
        on left: 207 208
        on right: 208 234 236 238 240
    expression_statement (153)
        on left: 209 210
        on right: 194 215 216 217 218
    selection_statement (154)
        on left: 211 212
        on right: 195
    iteration_statement (155)
        on left: 213 214 215 216 217 218
        on right: 196
    jump_statement (156)
        on left: 219 220 221 222 223
        on right: 197
    translation_unit (157)
        on left: 224 225
        on right: 0 225
    preprocessor_declaration (158)
        on left: 226 227
        on right: 232
    include_preprocessor (159)
        on left: 228 229
        on right: 226
    define_preprocessor (160)
        on left: 230
        on right: 227
    external_declaration (161)
        on left: 231 232 233
        on right: 224 225
    function_definition (162)
        on left: 234 235 236 237 238 239 240 241
        on right: 231


State 0

    0 $accept: • translation_unit $end

    IDENTIFIER    shift, and go to state 1
    TYPE_NAME     shift, and go to state 2
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    CHAR          shift, and go to state 8
    SHORT         shift, and go to state 9
    INT           shift, and go to state 10
    LONG          shift, and go to state 11
    SIGNED        shift, and go to state 12
    UNSIGNED      shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    CONST         shift, and go to state 16
    VOLATILE      shift, and go to state 17
    VOID          shift, and go to state 18
    STRUCT        shift, and go to state 19
    UNION         shift, and go to state 20
    ENUM          shift, and go to state 21
    INCLUDE_PP    shift, and go to state 22
    DEFINE_PP     shift, and go to state 23
    TYPEDEF_NAME  shift, and go to state 24
    '('           shift, and go to state 25
    '*'           shift, and go to state 26

    declaration                       go to state 27
    declaration_specifiers            go to state 28
    storage_class_specifier           go to state 29
    type_specifier                    go to state 30
    integer_type_specifier            go to state 31
    character_type_specifier          go to state 32
    integer_declaration_specifiers    go to state 33
    character_declaration_specifiers  go to state 34
    struct_or_union_specifier         go to state 35
    struct_or_union                   go to state 36
    enum_specifier                    go to state 37
    type_qualifier                    go to state 38
    declarator                        go to state 39
    direct_declarator                 go to state 40
    direct_array_declarator           go to state 41
    pointer                           go to state 42
    translation_unit                  go to state 43
    preprocessor_declaration          go to state 44
    include_preprocessor              go to state 45
    define_preprocessor               go to state 46
    external_declaration              go to state 47
    function_definition               go to state 48


State 1

  147 direct_declarator: IDENTIFIER •
  152 direct_array_declarator: IDENTIFIER • '[' constant_expression ']'
  153                        | IDENTIFIER • '[' ']'

    '['  shift, and go to state 49

    $default  reduce using rule 147 (direct_declarator)


State 2

  103 type_specifier: TYPE_NAME •

    $default  reduce using rule 103 (type_specifier)


State 3

   89 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 89 (storage_class_specifier)


State 4

   90 storage_class_specifier: EXTERN •

    $default  reduce using rule 90 (storage_class_specifier)


State 5

   91 storage_class_specifier: STATIC •

    $default  reduce using rule 91 (storage_class_specifier)


State 6

   92 storage_class_specifier: AUTO •

    $default  reduce using rule 92 (storage_class_specifier)


State 7
